1. Create a blog about CUDA SGEMM 2. Setup the comment section

--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,8 @@ links:
     url: /
   - title: Projects
     url: /projects/
-  # - title: Blogs
-  #   url: /blogs/
+  - title: Blogs
+    url: /blogs/
   - title: Publications
     url: /publications/
   - title: Services
